grammaire_CPYRR.output
Grammaire

    0 $accept: programme $end

    1 programme: PROG corps

    2 corps: liste_declarations liste_instructions
    3      | liste_instructions

    4 liste_declarations: declaration PV
    5                   | liste_declarations declaration PV

    6 liste_instructions: DEBUT suite_liste_inst FIN

    7 suite_liste_inst: instruction PV
    8                 | suite_liste_inst instruction PV

    9 declaration: declaration_type
   10            | declaration_variable
   11            | declaration_procedure
   12            | declaration_fonction

   13 declaration_type: TYPE IDF DP STRUCT liste_champs FSTRUCT
   14                 | TYPE IDF DP TABLEAU dimension DE nom_type

   15 dimension: CO liste_dimensions CF

   16 liste_dimensions: une_dimension
   17                 | liste_dimensions VIRG une_dimension

   18 une_dimension: expression PP expression

   19 liste_champs: un_champ PV
   20             | liste_champs un_champ PV

   21 un_champ: IDF DP nom_type

   22 nom_type: type_simple
   23         | IDF

   24 type_simple: ENTIER
   25            | REEL
   26            | BOOLEEN
   27            | CARACTERE
   28            | CHAINE CO CSTE_ENTIERE CF

   29 declaration_variable: VARIABLE liste_IDF DP nom_type

   30 liste_IDF: IDF
   31          | liste_IDF VIRG IDF

   32 declaration_procedure: PROCEDURE IDF liste_parametres corps

   33 declaration_fonction: FONCTION IDF liste_parametres RETOURNE type_simple corps

   34 liste_parametres: PO PF
   35                 | PO liste_param PF

   36 liste_param: un_param
   37            | liste_param PV un_param

   38 un_param: IDF DP type_simple

   39 instruction: affectation
   40            | condition
   41            | tant_que
   42            | declaration_procedure
   43            | appel
   44            | VIDE
   45            | RETOURNE resultat_retourne
   46            | fonc_pre

   47 resultat_retourne: %empty
   48                  | expression

   49 appel: IDF liste_arguments

   50 liste_arguments: PO PF
   51                | PO liste_args PF

   52 liste_args: un_arg
   53           | liste_args VIRG un_arg

   54 un_arg: expression

   55 condition: SI expression ALORS liste_instructions SINON liste_instructions

   56 tant_que: TANT_QUE PO expression PF FAIRE liste_instructions

   57 affectation: variable OPAFF expression

   58 variable: IDF CO liste_var CF var
   59         | IDF var

   60 liste_var: expression
   61          | liste_var VIRG expression

   62 var: P variable
   63    | %empty

   64 expression: expression ET exp
   65           | expression OU exp
   66           | exp

   67 exp: exp opp_bool exp1
   68    | exp1

   69 exp1: exp1 PLUS exp2
   70     | exp1 MOINS exp2
   71     | exp2

   72 exp2: exp2 MULT exp3
   73     | exp2 DIV exp3
   74     | exp2 MOD exp3
   75     | exp3

   76 exp3: PO expression PF
   77     | CSTE_ENTIERE
   78     | CSTE_REEL
   79     | CSTE_CARACTERE
   80     | CSTE_CHAINE
   81     | CSTE_BOOLEEN
   82     | appel
   83     | variable

   84 opp_bool: EGAL
   85         | DIFFERENT
   86         | SUPERIEUR
   87         | INFERIEUR
   88         | SUP_EGAL
   89         | INF_EGAL

   90 fonc_pre: LIRE PO liste_variables PF
   91         | ECRIRE PO format suite_ecriture PF

   92 suite_ecriture: VIRG variable suite_ecriture
   93               | %empty

   94 format: CSTE_CHAINE

   95 liste_variables: liste_variables VIRG variable
   96                | variable


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
PV (258) 4 5 7 8 19 20 37
PP (259) 18
DP (260) 13 14 21 29 38
VIRG (261) 17 31 53 61 92 95
PO (262) 34 35 50 51 56 76 90 91
PF (263) 34 35 50 51 56 76 90 91
CO (264) 15 28 58
CF (265) 15 28 58
P (266) 62
OPAFF (267) 57
ENTIER (268) 24
REEL (269) 25
BOOLEEN (270) 26
CARACTERE (271) 27
CHAINE (272) 28
TANT_QUE (273) 56
FAIRE (274) 56
SI (275) 55
ALORS (276) 55
SINON (277) 55
TABLEAU (278) 14
DE (279) 14
STRUCT (280) 13
FSTRUCT (281) 13
PROG (282) 1
DEBUT (283) 6
FIN (284) 6
TYPE (285) 13 14
VARIABLE (286) 29
PROCEDURE (287) 32
FONCTION (288) 33
RETOURNE (289) 33 45
VIDE (290) 44
PLUS (291) 69
MOINS (292) 70
MULT (293) 72
DIV (294) 73
MOD (295) 74
EGAL (296) 84
DIFFERENT (297) 85
SUPERIEUR (298) 86
INFERIEUR (299) 87
SUP_EGAL (300) 88
INF_EGAL (301) 89
OU (302) 65
ET (303) 64
CSTE_ENTIERE (304) 28 77
CSTE_REEL (305) 78
CSTE_BOOLEEN (306) 81
CSTE_CARACTERE (307) 79
CSTE_CHAINE (308) 80 94
IDF (309) 13 14 21 23 30 31 32 33 38 49 58 59
LIRE (310) 90
ECRIRE (311) 91


Non-terminaux, suivis des règles où ils apparaissent

$accept (57)
    à gauche: 0
programme (58)
    à gauche: 1, à droite: 0
corps (59)
    à gauche: 2 3, à droite: 1 32 33
liste_declarations (60)
    à gauche: 4 5, à droite: 2 5
liste_instructions (61)
    à gauche: 6, à droite: 2 3 55 56
suite_liste_inst (62)
    à gauche: 7 8, à droite: 6 8
declaration (63)
    à gauche: 9 10 11 12, à droite: 4 5
declaration_type (64)
    à gauche: 13 14, à droite: 9
dimension (65)
    à gauche: 15, à droite: 14
liste_dimensions (66)
    à gauche: 16 17, à droite: 15 17
une_dimension (67)
    à gauche: 18, à droite: 16 17
liste_champs (68)
    à gauche: 19 20, à droite: 13 20
un_champ (69)
    à gauche: 21, à droite: 19 20
nom_type (70)
    à gauche: 22 23, à droite: 14 21 29
type_simple (71)
    à gauche: 24 25 26 27 28, à droite: 22 33 38
declaration_variable (72)
    à gauche: 29, à droite: 10
liste_IDF (73)
    à gauche: 30 31, à droite: 29 31
declaration_procedure (74)
    à gauche: 32, à droite: 11 42
declaration_fonction (75)
    à gauche: 33, à droite: 12
liste_parametres (76)
    à gauche: 34 35, à droite: 32 33
liste_param (77)
    à gauche: 36 37, à droite: 35 37
un_param (78)
    à gauche: 38, à droite: 36 37
instruction (79)
    à gauche: 39 40 41 42 43 44 45 46, à droite: 7 8
resultat_retourne (80)
    à gauche: 47 48, à droite: 45
appel (81)
    à gauche: 49, à droite: 43 82
liste_arguments (82)
    à gauche: 50 51, à droite: 49
liste_args (83)
    à gauche: 52 53, à droite: 51 53
un_arg (84)
    à gauche: 54, à droite: 52 53
condition (85)
    à gauche: 55, à droite: 40
tant_que (86)
    à gauche: 56, à droite: 41
affectation (87)
    à gauche: 57, à droite: 39
variable (88)
    à gauche: 58 59, à droite: 57 62 83 92 95 96
liste_var (89)
    à gauche: 60 61, à droite: 58 61
var (90)
    à gauche: 62 63, à droite: 58 59
expression (91)
    à gauche: 64 65 66, à droite: 18 48 54 55 56 57 60 61 64 65 76
exp (92)
    à gauche: 67 68, à droite: 64 65 66 67
exp1 (93)
    à gauche: 69 70 71, à droite: 67 68 69 70
exp2 (94)
    à gauche: 72 73 74 75, à droite: 69 70 71 72 73 74
exp3 (95)
    à gauche: 76 77 78 79 80 81 82 83, à droite: 72 73 74 75
opp_bool (96)
    à gauche: 84 85 86 87 88 89, à droite: 67
fonc_pre (97)
    à gauche: 90 91, à droite: 46
suite_ecriture (98)
    à gauche: 92 93, à droite: 91 92
format (99)
    à gauche: 94, à droite: 91
liste_variables (100)
    à gauche: 95 96, à droite: 90 95


État 0

    0 $accept: . programme $end

    PROG  décalage et aller à l'état 1

    programme  aller à l'état 2


État 1

    1 programme: PROG . corps

    DEBUT      décalage et aller à l'état 3
    TYPE       décalage et aller à l'état 4
    VARIABLE   décalage et aller à l'état 5
    PROCEDURE  décalage et aller à l'état 6
    FONCTION   décalage et aller à l'état 7

    corps                  aller à l'état 8
    liste_declarations     aller à l'état 9
    liste_instructions     aller à l'état 10
    declaration            aller à l'état 11
    declaration_type       aller à l'état 12
    declaration_variable   aller à l'état 13
    declaration_procedure  aller à l'état 14
    declaration_fonction   aller à l'état 15


État 2

    0 $accept: programme . $end

    $end  décalage et aller à l'état 16


État 3

    6 liste_instructions: DEBUT . suite_liste_inst FIN

    TANT_QUE   décalage et aller à l'état 17
    SI         décalage et aller à l'état 18
    PROCEDURE  décalage et aller à l'état 6
    RETOURNE   décalage et aller à l'état 19
    VIDE       décalage et aller à l'état 20
    IDF        décalage et aller à l'état 21
    LIRE       décalage et aller à l'état 22
    ECRIRE     décalage et aller à l'état 23

    suite_liste_inst       aller à l'état 24
    declaration_procedure  aller à l'état 25
    instruction            aller à l'état 26
    appel                  aller à l'état 27
    condition              aller à l'état 28
    tant_que               aller à l'état 29
    affectation            aller à l'état 30
    variable               aller à l'état 31
    fonc_pre               aller à l'état 32


État 4

   13 declaration_type: TYPE . IDF DP STRUCT liste_champs FSTRUCT
   14                 | TYPE . IDF DP TABLEAU dimension DE nom_type

    IDF  décalage et aller à l'état 33


État 5

   29 declaration_variable: VARIABLE . liste_IDF DP nom_type

    IDF  décalage et aller à l'état 34

    liste_IDF  aller à l'état 35


État 6

   32 declaration_procedure: PROCEDURE . IDF liste_parametres corps

    IDF  décalage et aller à l'état 36


État 7

   33 declaration_fonction: FONCTION . IDF liste_parametres RETOURNE type_simple corps

    IDF  décalage et aller à l'état 37


État 8

    1 programme: PROG corps .

    $défaut  réduction par utilisation de la règle 1 (programme)


État 9

    2 corps: liste_declarations . liste_instructions
    5 liste_declarations: liste_declarations . declaration PV

    DEBUT      décalage et aller à l'état 3
    TYPE       décalage et aller à l'état 4
    VARIABLE   décalage et aller à l'état 5
    PROCEDURE  décalage et aller à l'état 6
    FONCTION   décalage et aller à l'état 7

    liste_instructions     aller à l'état 38
    declaration            aller à l'état 39
    declaration_type       aller à l'état 12
    declaration_variable   aller à l'état 13
    declaration_procedure  aller à l'état 14
    declaration_fonction   aller à l'état 15


État 10

    3 corps: liste_instructions .

    $défaut  réduction par utilisation de la règle 3 (corps)


État 11

    4 liste_declarations: declaration . PV

    PV  décalage et aller à l'état 40


État 12

    9 declaration: declaration_type .

    $défaut  réduction par utilisation de la règle 9 (declaration)


État 13

   10 declaration: declaration_variable .

    $défaut  réduction par utilisation de la règle 10 (declaration)


État 14

   11 declaration: declaration_procedure .

    $défaut  réduction par utilisation de la règle 11 (declaration)


État 15

   12 declaration: declaration_fonction .

    $défaut  réduction par utilisation de la règle 12 (declaration)


État 16

    0 $accept: programme $end .

    $défaut  accepter


État 17

   56 tant_que: TANT_QUE . PO expression PF FAIRE liste_instructions

    PO  décalage et aller à l'état 41


État 18

   55 condition: SI . expression ALORS liste_instructions SINON liste_instructions

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel       aller à l'état 48
    variable    aller à l'état 49
    expression  aller à l'état 50
    exp         aller à l'état 51
    exp1        aller à l'état 52
    exp2        aller à l'état 53
    exp3        aller à l'état 54


État 19

   45 instruction: RETOURNE . resultat_retourne

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 47 (resultat_retourne)

    resultat_retourne  aller à l'état 55
    appel              aller à l'état 48
    variable           aller à l'état 49
    expression         aller à l'état 56
    exp                aller à l'état 51
    exp1               aller à l'état 52
    exp2               aller à l'état 53
    exp3               aller à l'état 54


État 20

   44 instruction: VIDE .

    $défaut  réduction par utilisation de la règle 44 (instruction)


État 21

   49 appel: IDF . liste_arguments
   58 variable: IDF . CO liste_var CF var
   59         | IDF . var

    PO  décalage et aller à l'état 57
    CO  décalage et aller à l'état 58
    P   décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 63 (var)

    liste_arguments  aller à l'état 60
    var              aller à l'état 61


État 22

   90 fonc_pre: LIRE . PO liste_variables PF

    PO  décalage et aller à l'état 62


État 23

   91 fonc_pre: ECRIRE . PO format suite_ecriture PF

    PO  décalage et aller à l'état 63


État 24

    6 liste_instructions: DEBUT suite_liste_inst . FIN
    8 suite_liste_inst: suite_liste_inst . instruction PV

    TANT_QUE   décalage et aller à l'état 17
    SI         décalage et aller à l'état 18
    FIN        décalage et aller à l'état 64
    PROCEDURE  décalage et aller à l'état 6
    RETOURNE   décalage et aller à l'état 19
    VIDE       décalage et aller à l'état 20
    IDF        décalage et aller à l'état 21
    LIRE       décalage et aller à l'état 22
    ECRIRE     décalage et aller à l'état 23

    declaration_procedure  aller à l'état 25
    instruction            aller à l'état 65
    appel                  aller à l'état 27
    condition              aller à l'état 28
    tant_que               aller à l'état 29
    affectation            aller à l'état 30
    variable               aller à l'état 31
    fonc_pre               aller à l'état 32


État 25

   42 instruction: declaration_procedure .

    $défaut  réduction par utilisation de la règle 42 (instruction)


État 26

    7 suite_liste_inst: instruction . PV

    PV  décalage et aller à l'état 66


État 27

   43 instruction: appel .

    $défaut  réduction par utilisation de la règle 43 (instruction)


État 28

   40 instruction: condition .

    $défaut  réduction par utilisation de la règle 40 (instruction)


État 29

   41 instruction: tant_que .

    $défaut  réduction par utilisation de la règle 41 (instruction)


État 30

   39 instruction: affectation .

    $défaut  réduction par utilisation de la règle 39 (instruction)


État 31

   57 affectation: variable . OPAFF expression

    OPAFF  décalage et aller à l'état 67


État 32

   46 instruction: fonc_pre .

    $défaut  réduction par utilisation de la règle 46 (instruction)


État 33

   13 declaration_type: TYPE IDF . DP STRUCT liste_champs FSTRUCT
   14                 | TYPE IDF . DP TABLEAU dimension DE nom_type

    DP  décalage et aller à l'état 68


État 34

   30 liste_IDF: IDF .

    $défaut  réduction par utilisation de la règle 30 (liste_IDF)


État 35

   29 declaration_variable: VARIABLE liste_IDF . DP nom_type
   31 liste_IDF: liste_IDF . VIRG IDF

    DP    décalage et aller à l'état 69
    VIRG  décalage et aller à l'état 70


État 36

   32 declaration_procedure: PROCEDURE IDF . liste_parametres corps

    PO  décalage et aller à l'état 71

    liste_parametres  aller à l'état 72


État 37

   33 declaration_fonction: FONCTION IDF . liste_parametres RETOURNE type_simple corps

    PO  décalage et aller à l'état 71

    liste_parametres  aller à l'état 73


État 38

    2 corps: liste_declarations liste_instructions .

    $défaut  réduction par utilisation de la règle 2 (corps)


État 39

    5 liste_declarations: liste_declarations declaration . PV

    PV  décalage et aller à l'état 74


État 40

    4 liste_declarations: declaration PV .

    $défaut  réduction par utilisation de la règle 4 (liste_declarations)


État 41

   56 tant_que: TANT_QUE PO . expression PF FAIRE liste_instructions

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel       aller à l'état 48
    variable    aller à l'état 49
    expression  aller à l'état 75
    exp         aller à l'état 51
    exp1        aller à l'état 52
    exp2        aller à l'état 53
    exp3        aller à l'état 54


État 42

   76 exp3: PO . expression PF

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel       aller à l'état 48
    variable    aller à l'état 49
    expression  aller à l'état 76
    exp         aller à l'état 51
    exp1        aller à l'état 52
    exp2        aller à l'état 53
    exp3        aller à l'état 54


État 43

   77 exp3: CSTE_ENTIERE .

    $défaut  réduction par utilisation de la règle 77 (exp3)


État 44

   78 exp3: CSTE_REEL .

    $défaut  réduction par utilisation de la règle 78 (exp3)


État 45

   81 exp3: CSTE_BOOLEEN .

    $défaut  réduction par utilisation de la règle 81 (exp3)


État 46

   79 exp3: CSTE_CARACTERE .

    $défaut  réduction par utilisation de la règle 79 (exp3)


État 47

   80 exp3: CSTE_CHAINE .

    $défaut  réduction par utilisation de la règle 80 (exp3)


État 48

   82 exp3: appel .

    $défaut  réduction par utilisation de la règle 82 (exp3)


État 49

   83 exp3: variable .

    $défaut  réduction par utilisation de la règle 83 (exp3)


État 50

   55 condition: SI expression . ALORS liste_instructions SINON liste_instructions
   64 expression: expression . ET exp
   65           | expression . OU exp

    ALORS  décalage et aller à l'état 77
    OU     décalage et aller à l'état 78
    ET     décalage et aller à l'état 79


État 51

   66 expression: exp .
   67 exp: exp . opp_bool exp1

    EGAL       décalage et aller à l'état 80
    DIFFERENT  décalage et aller à l'état 81
    SUPERIEUR  décalage et aller à l'état 82
    INFERIEUR  décalage et aller à l'état 83
    SUP_EGAL   décalage et aller à l'état 84
    INF_EGAL   décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 66 (expression)

    opp_bool  aller à l'état 86


État 52

   68 exp: exp1 .
   69 exp1: exp1 . PLUS exp2
   70     | exp1 . MOINS exp2

    PLUS   décalage et aller à l'état 87
    MOINS  décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 68 (exp)


État 53

   71 exp1: exp2 .
   72 exp2: exp2 . MULT exp3
   73     | exp2 . DIV exp3
   74     | exp2 . MOD exp3

    MULT  décalage et aller à l'état 89
    DIV   décalage et aller à l'état 90
    MOD   décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 71 (exp1)


État 54

   75 exp2: exp3 .

    $défaut  réduction par utilisation de la règle 75 (exp2)


État 55

   45 instruction: RETOURNE resultat_retourne .

    $défaut  réduction par utilisation de la règle 45 (instruction)


État 56

   48 resultat_retourne: expression .
   64 expression: expression . ET exp
   65           | expression . OU exp

    OU  décalage et aller à l'état 78
    ET  décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 48 (resultat_retourne)


État 57

   50 liste_arguments: PO . PF
   51                | PO . liste_args PF

    PO              décalage et aller à l'état 42
    PF              décalage et aller à l'état 92
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel       aller à l'état 48
    liste_args  aller à l'état 93
    un_arg      aller à l'état 94
    variable    aller à l'état 49
    expression  aller à l'état 95
    exp         aller à l'état 51
    exp1        aller à l'état 52
    exp2        aller à l'état 53
    exp3        aller à l'état 54


État 58

   58 variable: IDF CO . liste_var CF var

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel       aller à l'état 48
    variable    aller à l'état 49
    liste_var   aller à l'état 96
    expression  aller à l'état 97
    exp         aller à l'état 51
    exp1        aller à l'état 52
    exp2        aller à l'état 53
    exp3        aller à l'état 54


État 59

   62 var: P . variable

    IDF  décalage et aller à l'état 98

    variable  aller à l'état 99


État 60

   49 appel: IDF liste_arguments .

    $défaut  réduction par utilisation de la règle 49 (appel)


État 61

   59 variable: IDF var .

    $défaut  réduction par utilisation de la règle 59 (variable)


État 62

   90 fonc_pre: LIRE PO . liste_variables PF

    IDF  décalage et aller à l'état 98

    variable         aller à l'état 100
    liste_variables  aller à l'état 101


État 63

   91 fonc_pre: ECRIRE PO . format suite_ecriture PF

    CSTE_CHAINE  décalage et aller à l'état 102

    format  aller à l'état 103


État 64

    6 liste_instructions: DEBUT suite_liste_inst FIN .

    $défaut  réduction par utilisation de la règle 6 (liste_instructions)


État 65

    8 suite_liste_inst: suite_liste_inst instruction . PV

    PV  décalage et aller à l'état 104


État 66

    7 suite_liste_inst: instruction PV .

    $défaut  réduction par utilisation de la règle 7 (suite_liste_inst)


État 67

   57 affectation: variable OPAFF . expression

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel       aller à l'état 48
    variable    aller à l'état 49
    expression  aller à l'état 105
    exp         aller à l'état 51
    exp1        aller à l'état 52
    exp2        aller à l'état 53
    exp3        aller à l'état 54


État 68

   13 declaration_type: TYPE IDF DP . STRUCT liste_champs FSTRUCT
   14                 | TYPE IDF DP . TABLEAU dimension DE nom_type

    TABLEAU  décalage et aller à l'état 106
    STRUCT   décalage et aller à l'état 107


État 69

   29 declaration_variable: VARIABLE liste_IDF DP . nom_type

    ENTIER     décalage et aller à l'état 108
    REEL       décalage et aller à l'état 109
    BOOLEEN    décalage et aller à l'état 110
    CARACTERE  décalage et aller à l'état 111
    CHAINE     décalage et aller à l'état 112
    IDF        décalage et aller à l'état 113

    nom_type     aller à l'état 114
    type_simple  aller à l'état 115


État 70

   31 liste_IDF: liste_IDF VIRG . IDF

    IDF  décalage et aller à l'état 116


État 71

   34 liste_parametres: PO . PF
   35                 | PO . liste_param PF

    PF   décalage et aller à l'état 117
    IDF  décalage et aller à l'état 118

    liste_param  aller à l'état 119
    un_param     aller à l'état 120


État 72

   32 declaration_procedure: PROCEDURE IDF liste_parametres . corps

    DEBUT      décalage et aller à l'état 3
    TYPE       décalage et aller à l'état 4
    VARIABLE   décalage et aller à l'état 5
    PROCEDURE  décalage et aller à l'état 6
    FONCTION   décalage et aller à l'état 7

    corps                  aller à l'état 121
    liste_declarations     aller à l'état 9
    liste_instructions     aller à l'état 10
    declaration            aller à l'état 11
    declaration_type       aller à l'état 12
    declaration_variable   aller à l'état 13
    declaration_procedure  aller à l'état 14
    declaration_fonction   aller à l'état 15


État 73

   33 declaration_fonction: FONCTION IDF liste_parametres . RETOURNE type_simple corps

    RETOURNE  décalage et aller à l'état 122


État 74

    5 liste_declarations: liste_declarations declaration PV .

    $défaut  réduction par utilisation de la règle 5 (liste_declarations)


État 75

   56 tant_que: TANT_QUE PO expression . PF FAIRE liste_instructions
   64 expression: expression . ET exp
   65           | expression . OU exp

    PF  décalage et aller à l'état 123
    OU  décalage et aller à l'état 78
    ET  décalage et aller à l'état 79


État 76

   64 expression: expression . ET exp
   65           | expression . OU exp
   76 exp3: PO expression . PF

    PF  décalage et aller à l'état 124
    OU  décalage et aller à l'état 78
    ET  décalage et aller à l'état 79


État 77

   55 condition: SI expression ALORS . liste_instructions SINON liste_instructions

    DEBUT  décalage et aller à l'état 3

    liste_instructions  aller à l'état 125


État 78

   65 expression: expression OU . exp

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel     aller à l'état 48
    variable  aller à l'état 49
    exp       aller à l'état 126
    exp1      aller à l'état 52
    exp2      aller à l'état 53
    exp3      aller à l'état 54


État 79

   64 expression: expression ET . exp

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel     aller à l'état 48
    variable  aller à l'état 49
    exp       aller à l'état 127
    exp1      aller à l'état 52
    exp2      aller à l'état 53
    exp3      aller à l'état 54


État 80

   84 opp_bool: EGAL .

    $défaut  réduction par utilisation de la règle 84 (opp_bool)


État 81

   85 opp_bool: DIFFERENT .

    $défaut  réduction par utilisation de la règle 85 (opp_bool)


État 82

   86 opp_bool: SUPERIEUR .

    $défaut  réduction par utilisation de la règle 86 (opp_bool)


État 83

   87 opp_bool: INFERIEUR .

    $défaut  réduction par utilisation de la règle 87 (opp_bool)


État 84

   88 opp_bool: SUP_EGAL .

    $défaut  réduction par utilisation de la règle 88 (opp_bool)


État 85

   89 opp_bool: INF_EGAL .

    $défaut  réduction par utilisation de la règle 89 (opp_bool)


État 86

   67 exp: exp opp_bool . exp1

    PO              décalage et aller à l'état 42
    CSTE_ENTIERE    décalage et aller à l'état 43
    CSTE_REEL       décalage et aller à l'état 44
    CSTE_BOOLEEN    décalage et aller à l'état 45
    CSTE_CARACTERE  décalage et aller à l'état 46
    CSTE_CHAINE     décalage et aller à l'état 47
    IDF             décalage et aller à l'état 21

    appel     aller à l'état 48
    variable  aller à l'état 49
    exp1      aller à l'état 128
    exp2      aller à l'état 53
    exp3      aller à l'état 54


État 87
